🐛 Fix templates - remove p.is_deleted references causing errors
- Fix full_process_route error 'no such column p.is_deleted'
- Update all admin templates
- Fix popup and board templates

--- a/templates/admin-change-request-columns-simplified.html
+++ b/templates/admin-change-request-columns-simplified.html
@@ -1273,5 +1273,5 @@ let editingId = null;
 </script>
 
 <!-- Sortable.js CDN -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="/static/js/Sortable.min.js"></script>
 {% endblock %}
