--- a/templates/admin-accident-columns-simplified.html
+++ b/templates/admin-accident-columns-simplified.html
@@ -2330,6 +2330,8 @@ let editingId = null;
 </script>
 
 <!-- Sortable.js CDN 추가 -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="/static/js/Sortable.min.js"></script>
+<!-- Sortable 초기화 헬퍼 -->
+<script src="/static/js/sortable-init.js"></script>
 
 {% endblock %}
