--- a/templates/admin-fullprocess-columns.html
+++ b/templates/admin-fullprocess-columns.html
@@ -615,7 +615,9 @@
 </div>
 
 <!-- Sortable.js CDN 먼저 로드 -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="/static/js/Sortable.min.js"></script>
+<!-- Sortable 초기화 헬퍼 -->
+<script src="/static/js/sortable-init.js"></script>
 
 <script>
 // Sortable.js 로드 확인
