--- a/templates/admin-safety-instruction-codes.html
+++ b/templates/admin-safety-instruction-codes.html
@@ -919,5 +919,5 @@ document.head.appendChild(style);
 </script>
 
 <!-- Sortable.js CDN -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="/static/js/Sortable.min.js"></script>
 {% endblock %}
