--- a/templates/admin-safety-instruction-columns.html
+++ b/templates/admin-safety-instruction-columns.html
@@ -2265,7 +2265,9 @@ let editingId = null;
         });
 </script>
 
-<!-- Sortable.js CDN 추가 -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<!-- Sortable.js 로컬 파일 -->
+<script src="/static/js/Sortable.min.js"></script>
+<!-- Sortable 초기화 헬퍼 -->
+<script src="/static/js/sortable-init.js"></script>
 
 {% endblock %}
